web-infras/parser/tests/fixtures/babel/core/uncategorised/516/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,12)
1|function a(package) { "use strict"; }
 |          ^
